# codetri-notes

./: .gitignore  README.md  config.json  config.toml  generate.py  generate2.py  pyproject.toml  requirements.txt
raw/: 2023-02-07.html  2023-02-08.html
scripts/: get-requirements.py  install.sh  run-app.sh
src/: codetri_renderer.py  models.py
src/app/: __init__.py  config.py  render_rules.py
src/core/: config.py  helpers.py  page.py
src/core/feed/: __init__.py  json.py  rss.py
src/core/helpers/: __init__.py
src/templates/: note.jinja2
static/: style.css
templates/: index.html  note.html
usr/static/: style.css
usr/templates/: index.jinja2  note.jinja2  post.jinja2
usr/templates/_partials/: base.jinja2
usr/templates/macros/: render_logo.jinja2
usr/templates/partials/: base.jinja2  footer.jinja2  navigation.jinja2
