[tool.poetry]
name = "codetri-notes"
version = "0.1.0"
description = ""
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
mistletoe = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
preview = true
line-ending = "native"
indent-style = "space"
quote-style = "double"

[tool.ruff.isort]
lines-after-imports = 2
extra-standard-library = ["zoneinfo"]
