[tool.poetry]
name = "codetri-notes"
version = "0.1.0"
description = "An accidental static blog site generator"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
mistletoe = "^1.4"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
preview = true
line-ending = "native"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = [
  "ERA", # eradicate
  "I",   # isort,
  "TD",  # flake8-todos
  "PTH", # flake8-use-pathlib
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
lines-after-imports = 2
extra-standard-library = ["tomllib", "zoneinfo"]
