[project]
name = "codetri-notes"
description = "An accidental static blog site generator"
authors = [{ name = "Caleb", email = "le717@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.5"
minify-html = "^0.15.0"
markdown-it-py = { extras = ["linkify", "plugins"], version = "^3.0.0" }

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
preview = true
line-ending = "native"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-ignore = ["TD002"]
extend-select = [
  "ERA", # eradicate
  "I",   # isort,
  "TD",  # flake8-todos
  "PTH", # flake8-use-pathlib
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
lines-after-imports = 2
extra-standard-library = ["tomllib", "zoneinfo"]
